# PathOmics

./: README.md  README_cn.md  environment.yaml  pyproject.toml
examples/: extract_from_pandas.py  params.yaml
src/pathomics/: _version.py  extractor.py
src/pathomics/aggregation/: functions.py
src/pathomics/features/: firstorder.py  glcm.py  gldm.py  glrlm.py  glszm.py  ngtdm.py  shape.py
src/pathomics/io/: geojson.py  output.py  params.py  slide.py
src/pathomics/pipeline/: cell_features.py  wsi_aggregation.py
src/pathomics/utils/: make_csv_file.py
src/wsiradiomics/: _version.py
src/wsiradiomics/aggregation/: functions.py  readme.md
src/wsiradiomics/io/: params.py
