[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathomics"
version = "0.2.0"
description = "WSI radiomics feature extraction from cell polygons (GeoJSON) and WSI slides"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "D.N. Huang" }]
keywords = ["WSI", "radiomics", "pathology", "openslide", "geojson"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "scipy",
  "scikit-image",
  "shapely",
]

[project.optional-dependencies]
wsi = [
  "openslide-python",
  "imagecodecs",
  "pyvips; platform_system != 'Windows'",
]

geo = [
  "geopandas",
]

dev = [
  "build",
  "twine",
  "pytest",
  "ruff",
]

[project.scripts]
pathomics-extract = "pathomics.extractor:main"
wsiradiomics-extract = "pathomics.extractor:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

